# aism

./: Cargo.toml  Dockerfile  Readme.md  Trunk.toml  deployment.yaml  index.html  nginx.conf  shell.nix
src/: es_logger.rs  main.rs  tabs.rs
src/tabs/: chat.rs  dashboard.rs  file_chat.rs  fine_tune.rs
