[package]
name = "aism"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["wasmbind", "serde"] }
# Добавьте features для работы с json и http
gloo-net = { version = "0.6.0", features = ["http", "json"] }
# Добавьте этот крэйт, он используется в коде для TimeoutFuture
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.8.15", features = ["csr", "hydrate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
web-sys = { version = "0.3.85", features = ["console"] }
